--- a/source/form.html
+++ b/source/form.html
@@ -118,6 +118,7 @@
 
         <fieldset class="contest-form__group contest-form__group--contacts">
           <legend class="contest-form__title contest-form__title--contacts">Контактная информация</legend>
+          <div class="contest-form__group-wrapper">
           <div class="form-field form-field--contact-data">
             <label class="form-field__label" for="user-phonenumber">Номер телефона</label>
             <input class="form-field__input-text" type="tel" name="user-phonenumber" id="user-phonenumber" placeholder="Номер, пожалуйста" pattern="[0-9]{1}-[0-9]{3}-[0-9]{3}">
@@ -126,6 +127,7 @@
           <div class="form-field form-field--contact-data">
             <label class="form-field__label" for="email">Адрес почты</label>
             <input class="form-field__input-text" type="email" name="email" id="email" placeholder="Введите почту *">
+          </div>
           </div>
         </fieldset>
 
