--- a/source/photo.html
+++ b/source/photo.html
@@ -41,111 +41,110 @@
     </header>
 
     <main class="page-main">
-      <h1 class="visually-hidden">Фотографии пользователей</h1>
-      <div class="inner-page-intro">Фотографии пользователей</div>
-      <div class="main-nav__wrapper">
-        <section class="users-photos">
-          <p class="users-photos__description">Взгляните на фотографии, которые выкладывают пользователи! Видите, как не хватает ваших?</p>
-          <ul class="users-photos__list">
-            <li class="users-photos__item users-photos__item--first-item user-photo">
-              <img class="user-photo__picture" src="img/panorama-mobile@1x.jpg" width="320" height="137" alt="Панорама">
-              <div class="user-photo__description user-photo__description--first-description">
-                <div class="user-photo__comment">
-                  <cite class="user-photo__author">Анна</cite>
-                  <time class="user-photo__time">(5 минут назад)</time>
-                </div>
-                <blockquote class="user-photo__text user-photo__text--first-text">Прыгать или нет? Напишите в комментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!</blockquote>
-                <form class="user-photo__like-form user-photo__like-form--first-form">
-                  <button class="user-photo__like" type="button">Нравится: 215</button>
-                </form>
-              </div>
-            </li>
-            <li class="users-photos__item user-photo">
-              <img class="user-photo__picture" src="img/photo-car-mobile@1x.jpg" width="280" height="180" alt="Автомобиль">
-              <div class="user-photo__description">
-                <div class="user-photo__comment">
-                  <cite class="user-photo__author">Левон</cite>
-                  <time class="user-photo__time">(5 часов назад)</time>
-                </div>
-                <blockquote class="user-photo__text">Вчера он на луну летал, сегодня в руки к нам попал.</blockquote>
-                <form class="user-photo__like-form">
-                  <button class="user-photo__like" type="button">Нравится: 356</button>
-                </form>
-              </div>
-            </li>
+      <h1 class="inner-page-intro">Фотографии пользователей</h1>
+      <section class="users-photos">
+        <p class="users-photos__description">Взгляните на фотографии, которые выкладывают пользователи! Видите, как не хватает ваших?</p>
 
-            <li class="users-photos__item user-photo">
-              <img class="user-photo__picture" src="img/photo-drumset-mobile@1x.jpg" width="280" height="180" alt="Барабаны">
-              <div class="user-photo__description">
-                <div class="user-photo__comment">
-                  <cite class="user-photo__author">Антон</cite>
-                  <time class="user-photo__time">(12 часов назад)</time>
-                </div>
-                <blockquote class="user-photo__text">Соседи будут рады!</blockquote>
-                <form class="user-photo__like-form">
-                  <button class="user-photo__like" type="button">Нравится: 666</button>
-                </form>
+        <article class="user-photo user-photo--panorama">
+            <img class="user-photo__picture" src="img/panorama-mobile@1x.jpg" width="320" height="137" alt="Панорама">
+            <div class="user-photo__description user-photo__description--first-description">
+              <div class="user-photo__comment">
+                <cite class="user-photo__author">Анна</cite>
+                <time class="user-photo__time">(5 минут назад)</time>
               </div>
-            </li>
+              <blockquote class="user-photo__text user-photo__text--first-text">Прыгать или нет? Напишите в комментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!</blockquote>
+              <form class="user-photo__like-form user-photo__like-form--first-form">
+                <button class="user-photo__like" type="button">Нравится: 215</button>
+              </form>
+            </div>
+        </article>
 
-            <li class="users-photos__item user-photo">
-              <img class="user-photo__picture" src="img/photo-window-mobile@1x.jpg" width="280" height="180" alt="Окно">
-              <div class="user-photo__description">
-                <div class="user-photo__comment">
-                  <cite class="user-photo__author">Борис</cite>
-                  <time class="user-photo__time">(20 часов назад)</time>
-                </div>
-                <blockquote class="user-photo__text">Здесь могла быть ваша цитата о высоком и вечном.</blockquote>
-                <form class="user-photo__like-form">
-                  <button class="user-photo__like" type="button">Нравится: 215</button>
-                </form>
+        <ul class="users-photos__list">
+          <li class="users-photos__item user-photo">
+            <img class="user-photo__picture" src="img/photo-car-mobile@1x.jpg" width="280" height="180" alt="Автомобиль">
+            <div class="user-photo__description">
+              <div class="user-photo__comment">
+                <cite class="user-photo__author">Левон</cite>
+                <time class="user-photo__time">(5 часов назад)</time>
               </div>
-            </li>
+              <blockquote class="user-photo__text">Вчера он на луну летал, сегодня в руки к нам попал.</blockquote>
+              <form class="user-photo__like-form">
+                <button class="user-photo__like" type="button">Нравится: 356</button>
+              </form>
+            </div>
+          </li>
 
-            <li class="users-photos__item user-photo">
-              <img class="user-photo__picture" src="img/photo-fair-mobile@1x.jpg" width="280" height="180" alt="Ярмарка">
-              <div class="user-photo__description">
-                <div class="user-photo__comment">
-                  <cite class="user-photo__author">Сергей</cite>
-                  <time class="user-photo__time">(25 часов назад)</time>
-                </div>
-                <blockquote class="user-photo__text">Самая кубанская в мире!</blockquote>
-                <form class="user-photo__like-form">
-                  <button class="user-photo__like" type="button">Нравится: 4</button>
-                </form>
+          <li class="users-photos__item user-photo">
+            <img class="user-photo__picture" src="img/photo-drumset-mobile@1x.jpg" width="280" height="180" alt="Барабаны">
+            <div class="user-photo__description">
+              <div class="user-photo__comment">
+                <cite class="user-photo__author">Антон</cite>
+                <time class="user-photo__time">(12 часов назад)</time>
               </div>
-            </li>
+              <blockquote class="user-photo__text">Соседи будут рады!</blockquote>
+              <form class="user-photo__like-form">
+                <button class="user-photo__like" type="button">Нравится: 666</button>
+              </form>
+            </div>
+          </li>
 
-            <li class="users-photos__item user-photo">
-              <img class="user-photo__picture" src="img/photo-pov-mobile@1x.jpg" width="280" height="180" alt="Фото">
-              <div class="user-photo__description">
-                <div class="user-photo__comment">
-                  <cite class="user-photo__author">Максим</cite>
-                  <time class="user-photo__time">(40 часов назад)</time>
-                </div>
-                <blockquote class="user-photo__text">Где снего-то?</blockquote>
-                <form class="user-photo__like-form">
-                <button class="user-photo__like" type="button">Нравится: 150</button>
-                </form>
+          <li class="users-photos__item user-photo">
+            <img class="user-photo__picture" src="img/photo-window-mobile@1x.jpg" width="280" height="180" alt="Окно">
+            <div class="user-photo__description">
+              <div class="user-photo__comment">
+                <cite class="user-photo__author">Борис</cite>
+                <time class="user-photo__time">(20 часов назад)</time>
               </div>
-            </li>
+              <blockquote class="user-photo__text">Здесь могла быть ваша цитата о высоком и вечном.</blockquote>
+              <form class="user-photo__like-form">
+                <button class="user-photo__like" type="button">Нравится: 215</button>
+              </form>
+            </div>
+          </li>
 
-            <li class="users-photos__item user-photo">
-              <img class="user-photo__picture" src="img/photo-wing-mobile@1x.jpg" width="280" height="180" alt="Крыло самолёта">
-              <div class="user-photo__description">
-                <div class="user-photo__comment">
-                  <cite class="user-photo__author">Надежда</cite>
-                  <time class="user-photo__time">(45 часов назад)</time>
-                </div>
-                <blockquote class="user-photo__text">Всем GM и взаимные лайки!</blockquote>
-                <form class="user-photo__like-form">
-                <button class="user-photo__like" type="button">Нравится: 2560</button>
-                </form>
+          <li class="users-photos__item user-photo">
+            <img class="user-photo__picture" src="img/photo-fair-mobile@1x.jpg" width="280" height="180" alt="Ярмарка">
+            <div class="user-photo__description">
+              <div class="user-photo__comment">
+                <cite class="user-photo__author">Сергей</cite>
+                <time class="user-photo__time">(25 часов назад)</time>
               </div>
-            </li>
-          </ul>
-        </section>
-      </div>
+              <blockquote class="user-photo__text">Самая кубанская в мире!</blockquote>
+              <form class="user-photo__like-form">
+                <button class="user-photo__like" type="button">Нравится: 4</button>
+              </form>
+            </div>
+          </li>
+
+          <li class="users-photos__item user-photo">
+            <img class="user-photo__picture" src="img/photo-pov-mobile@1x.jpg" width="280" height="180" alt="Фото">
+            <div class="user-photo__description">
+              <div class="user-photo__comment">
+                <cite class="user-photo__author">Максим</cite>
+                <time class="user-photo__time">(40 часов назад)</time>
+              </div>
+              <blockquote class="user-photo__text">Где снего-то?</blockquote>
+              <form class="user-photo__like-form">
+              <button class="user-photo__like" type="button">Нравится: 150</button>
+              </form>
+            </div>
+          </li>
+
+          <li class="users-photos__item user-photo">
+            <img class="user-photo__picture" src="img/photo-wing-mobile@1x.jpg" width="280" height="180" alt="Крыло самолёта">
+            <div class="user-photo__description">
+              <div class="user-photo__comment">
+                <cite class="user-photo__author">Надежда</cite>
+                <time class="user-photo__time">(45 часов назад)</time>
+              </div>
+              <blockquote class="user-photo__text">Всем GM и взаимные лайки!</blockquote>
+              <form class="user-photo__like-form">
+              <button class="user-photo__like" type="button">Нравится: 2560</button>
+              </form>
+            </div>
+          </li>
+        </ul>
+      </section>
       <section class="photo-upload">
         <p class="photo-upload__description">Затми их всех!<br> Выкладывайте все, что накопилось на телефоне!</p>
           <div class="photo-upload__wrapper">
@@ -153,9 +152,9 @@
               <img src="img/photo-road-mobile@1x.jpg" width="280" height="374" alt="Дорога">
               <form class="photo-upload__form">
                 <div class="photo-upload__correction">
-                  <button class="photo-upload__button photo-upload__button--crop" type="button">Вырезать</button>
-                  <button class="photo-upload__button photo-upload__button--fill" type="button">Цвет</button>
-                  <button class="photo-upload__button photo-upload__button--contrast" type="button">Контраст</button>
+                  <label class="photo-upload__button photo-upload__button--crop">Вырезать</label>
+                  <label class="photo-upload__button photo-upload__button--fill">Цвет</label>
+                  <label class="photo-upload__button photo-upload__button--contrast">Контраст</label>
                 <!-- Полоска формы -->
                 </div>
                 <div class="photo-upload__result">
@@ -188,11 +187,11 @@
         </li>
       </ul>
       <div class="developer">
-        <span>Разработано
+        <p class="developer__info">Разработано
           <a href="http://htmlacademy.ru">
             <img class="developer__logo" src="img/logo-htmlacademy.svg" width="26" height="34" alt="HTML Academy">
           </a>
-        </span>
+        </p>
       </div>
     </footer>
   </body>
