--- a/source/photo.html
+++ b/source/photo.html
@@ -9,15 +9,20 @@
   <body>
     <header class="page-header">
       <div class="page-header__wrapper">
-        <div class="page-header__logo">
-          <a>
-            <img class="page-header__logo-image" src="img/logo-pink-white-mobile.svg" width="75" height="23" alt="PINK">
-          </a>
-        </div>
+
         <nav class="main-nav">
-          <div class="main-nav__wrapper">
-            <button class="main-nav__toggle" type="button">Открыть меню</button>
-            <ul class="main-nav__list">
+          <div class="main-nav__logo">
+            <a>
+              <picture>
+                <source media="(min-width: 960px)" srcset="img/logo-pink-white-desktop.svg">
+                <source media="(min-width: 660px)" srcset="img/logo-pink-white-tablet.svg">
+                <img class="main-nav__logo-image" src="img/logo-pink-white-mobile.svg" alt="PINK">
+              </picture>
+            </a>
+          <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+          </div>
+
+          <ul class="main-nav__list">
               <li class="main-nav__item">
                 <a href="index.html">Главная</a>
               </li>
@@ -34,7 +39,7 @@
                 <a href="#">HTML Academy</a>
               </li>
             </ul>
-          </div>
+
         </nav>
       </div>
 
